--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,19 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/* Chrome, Safari, Edge (Webkit 기반 브라우저)에서 stepper 버튼 제거 */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none; /* 화살표(스테퍼) 숨김 */
+  margin: 0; /* 여백 제거 */
+}
+
+/* Firefox에서 stepper 버튼 제거 */
+input[type="number"] {
+  -moz-appearance: textfield; /* 일반 텍스트필드처럼 표시 */
+}
+
+
 /* Line clamp utilities */
 .line-clamp-2 {
   display: -webkit-box;
