--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,17 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+html, body {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+html::-webkit-scrollbar, 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+
 /* Chrome, Safari, Edge (Webkit 기반 브라우저)에서 stepper 버튼 제거 */
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -36,6 +47,7 @@ input[type="number"]::-webkit-inner-spin-button {
 /* Firefox에서 stepper 버튼 제거 */
 input[type="number"] {
   -moz-appearance: textfield; /* 일반 텍스트필드처럼 표시 */
+  appearance: textfield; /* 표준 속성 추가 */
 }
 
 
@@ -59,6 +71,23 @@ input[type="number"] {
   -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
   overflow: hidden;
+}
+
+body::webkit-scrollbar {
+  width: 8px;
+}
+
+body::webkit-scrollbar-track {
+  background: #0a0a0a;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: #222;
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
 }
 
 @layer utilities {
